fix: scrollbar

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -380,6 +380,8 @@ video {
   top: 0px;
 }.top-2\/4 {
   top: 50%;
+}.z-0 {
+  z-index: 0;
 }.z-10 {
   z-index: 10;
 }.z-50 {
@@ -441,8 +443,6 @@ video {
   height: 100%;
 }.h-screen {
   height: 100vh;
-}.min-h-screen {
-  min-height: 100vh;
 }.w-20 {
   width: 5rem;
 }.w-3 {
@@ -544,6 +544,8 @@ video {
   margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
 }.overflow-hidden {
   overflow: hidden;
+}.overflow-y-auto {
+  overflow-y: auto;
 }.rounded {
   border-radius: 0.25rem;
 }.rounded-full {
